Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16646

QML debugger stops as if a breakpoint existed after being paused

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.1.0-rc1
    • Qt Creator 4.0.3, Qt Creator 4.1.0-rc1
    • None
    • Ubuntu 14.04 LTS 64 bit
      Qt 5.7.0
    • a5b0525b79555439a4138e9a9c44f60518feed51

      1. Create a new Qt Quick UI project.
      2. Run this in the debugger.
      3. Interrupt the debugger.
      4. Continue debugging.
      5. Click into the application's window.
        Execution will stop in the line:
        Qt.quit();
        

      There is no breakpoint. Execution should not stop there.
      When you don't interrupt the debugger beforehand, execution does not stop at that point.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes