src/plugins/debugger/qml/qmlengine.cpp
@@ -661,7 +661,7 @@ void QmlEngine::interruptInferior()
 {
     showMessage(INTERRUPT, LogInput);
     d->runDirectCommand(INTERRUPT);
-    notifyInferiorStopOk();
+    showStatusMessage(tr("Waiting for JavaScript engine to interrupt on next statement."));
 }
 
 void QmlEngine::executeStep()
@@ -1966,7 +1966,8 @@ void QmlEnginePrivate::messageReceived(const QByteArray &data)
                             }
                             engine->notifyInferiorSpontaneousStop();
                             backtrace();
-                        } else if (engine->state() == InferiorStopOk) {
+                        } else if (engine->state() == InferiorStopRequested) {
+                            engine->notifyInferiorStopOk();
                             backtrace();
                         }
                     }
